--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -212,13 +212,11 @@
         <!-- Dropdown menu -->
         <div class="dropdown-menu dropdown-menu-right">
           <div class="dropdown-title">Stare: <span class="text-success">Conectat</span></div>
-          <a href="features-profile.html" class="dropdown-item has-icon">
-            <i class="far fa-user"></i> Profil
-          </a>
-          <a href="features-activities.html" class="dropdown-item has-icon">
+          <%= link_to(icon("far fa-user", " Profil"), edit_registration_path(current_admin), class: "dropdown-item has-icon") %>
+          <a href="#" class="dropdown-item has-icon">
             <i class="fas fa-bolt"></i> Activități
           </a>
-          <a href="features-settings.html" class="dropdown-item has-icon">
+          <a href="#" class="dropdown-item has-icon">
             <i class="fas fa-cog"></i> Setări
           </a>
           <div class="dropdown-divider"></div>
