--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -69,7 +69,7 @@
   </form>
   <ul class="navbar-nav navbar-right">
     <!-- Messages -->
-    <li class="dropdown dropdown-list-toggle"><a href="#" data-toggle="dropdown" class="nav-link nav-link-lg message-toggle beep"><i class="far fa-envelope"></i></a>
+    <li class="dropdown dropdown-list-toggle"><a href="#" data-toggle="dropdown" class="nav-link nav-link-lg message-toggle beep"><i class="fas fa-envelope"></i></a>
       <div class="dropdown-menu dropdown-list dropdown-menu-right">
         <div class="dropdown-header">Messages
           <div class="float-right">
@@ -136,7 +136,7 @@
       </div>
     </li>
     <!-- Notifications -->
-    <li class="dropdown dropdown-list-toggle"><a href="#" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg beep"><i class="far fa-bell"></i></a>
+    <li class="dropdown dropdown-list-toggle"><a href="#" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg beep"><i class="fas fa-bell"></i></a>
       <div class="dropdown-menu dropdown-list dropdown-menu-right">
         <div class="dropdown-header">Notifications
           <div class="float-right">
@@ -155,7 +155,7 @@
           </a>
           <a href="#" class="dropdown-item">
             <div class="dropdown-item-icon bg-info text-white">
-              <i class="far fa-user"></i>
+              <i class="fas fa-user"></i>
             </div>
             <div class="dropdown-item-desc">
               <b>You</b> and <b>Dedik Sugiharto</b> are now friends
