--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -9,7 +9,7 @@
     <ul class="sidebar-menu" data-controller="sidebar">
       <li class="<%= active_nav_item('home', 'index') %>">
         <%= link_to root_path, class: "nav-link" do %>
-          <i class="fab fa-columns" style="font-size: 16px;"></i> <span>Panou de control</span>
+          <i class="fas fa-columns" style="font-size: 16px;"></i> <span>Panou de control</span>
         <% end %>
       </li>
 
@@ -21,31 +21,31 @@
 
       <li class="<%= active_nav_item('grades', 'index') %>">
         <%= link_to grades_path, class: "nav-link" do %>
-          <i class="fab fa-users-class"></i> <span>Clase</span>
+          <i class="fas fa-users-class"></i> <span>Clase</span>
         <% end %>
       </li>
 
       <li class="<%= active_nav_item('volunteers', 'index') %>">
         <%= link_to volunteers_path, class: "nav-link" do %>
-          <i class="fab fa-person-sign"></i> <span>Voluntari</span>
+          <i class="fas fa-person-sign"></i> <span>Voluntari</span>
         <% end %>
       </li>
 
       <li class="<%= active_nav_item('departments', 'index') %>">
         <%= link_to departments_path, class: "nav-link" do %>
-          <i class="fab fa-building"></i> <span>Departamente</span>
+          <i class="fas fa-building"></i> <span>Departamente</span>
         <% end %>
       </li>
 
       <li class="<%= active_nav_item('jobs', 'index') %>">
         <%= link_to jobs_path, class: "nav-link" do %>
-          <i class="fab fa-users"></i> <span>Atribuții</span>
+          <i class="fas fa-users"></i> <span>Atribuții</span>
         <% end %>
       </li>
 
       <li class="<%= active_nav_item('stands', 'index') %>">
         <%= link_to stands_path, class: "nav-link" do %>
-          <i class="fab fa-shopping-cart"></i> <span>Standuri</span>
+          <i class="fas fa-shopping-cart"></i> <span>Standuri</span>
         <% end %>
       </li>
 
@@ -53,7 +53,7 @@
 
       <li class="<%= active_nav_item('home', 'about') %>">
         <%= link_to about_path, class: "nav-link" do %>
-          <i class="fab fa-info"></i> <span>Despre aplicație</span>
+          <i class="fas fa-info"></i> <span>Despre aplicație</span>
         <% end %>
       </li>
 
