--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="section-header d-mobile-none">
     <h1>Jobs</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
       <div class="breadcrumb-item"><%= link_to 'Jobs', jobs_path %></div>
       <div class="breadcrumb-item">Editing Job</div>
     </div>
