--- a/app/views/stands/new.html.erb
+++ b/app/views/stands/new.html.erb
@@ -2,7 +2,7 @@
   <div class="section-header d-mobile-none">
     <h1>Stands</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
       <div class="breadcrumb-item"><%= link_to 'Stands', stands_path %></div>
       <div class="breadcrumb-item">New Stand</div>
     </div>
