--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -9,11 +9,11 @@
   </div>
   <div class="form-group">
     <%= form.label :start %>
-    <%= form.text_field :start, value: l(event.start), class: 'form-control', data: { controller: 'datetime' } %>
+    <%= form.text_field :start, class: 'form-control', data: { controller: 'datetime' } %>
   </div>
   <div class="form-group">
     <%= form.label :end %>
-    <%= form.text_field :end, value: l(event.end), class: 'form-control', data: { controller: 'datetime' } %>
+    <%= form.text_field :end, class: 'form-control', data: { controller: 'datetime' } %>
   </div>
   <div class="form-group">
     <div class="custom-control custom-checkbox">
