--- a/app/views/events/edit.js.erb
+++ b/app/views/events/edit.js.erb
@@ -1,4 +1,4 @@
-$("#modal-window").find(".modal-content").html("<%= j (render 'new') %>");
+$("#modal-window").find(".modal-content").html("<%= j (render 'edit') %>");
 
 $('#modal-window').modal('show');
 
