--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
     </div>
     <div class="col-12 p-0">
       <div class="row" id="data-presentation">
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
           <%= link_to students_path do %>
             <div class="card card-statistic-1">
               <div class="card-icon bg-primary">
@@ -43,7 +43,7 @@
             </div>
           <% end %>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
           <%= link_to volunteers_path do %>
             <div class="card card-statistic-1">
               <div class="card-icon bg-success">
@@ -60,7 +60,7 @@
             </div>
           <% end %>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
           <%= link_to stands_path do %>
             <div class="card card-statistic-1">
               <div class="card-icon bg-warning">
@@ -77,7 +77,7 @@
             </div>
           <% end %>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12">
           <%= link_to departments_path do %>
             <div class="card card-statistic-1">
               <div class="card-icon bg-danger">
@@ -93,7 +93,7 @@
               </div>
             </div>
           <% end %>
-        </div>                  
+        </div>
       </div>
     </div>
 
@@ -125,12 +125,14 @@
                 </div>
                 <h2>Încă nu ai creat niciun eveniment</h2>
                 <p class="lead">
-                  Nu ai creat niciun eveniment până acum. Pentru a crea un eveniment, selectează datele respective din calendar și introdu detaliile în casetă.
+                  Nu ai creat niciun eveniment până acum. Pentru a crea un eveniment, selectează datele corespunzătoare din calendar și introdu detaliile în casetă.
                 </p>
-                <a href="#" class="mt-4 bb">Ajutor</a>
+                <a class="mt-4 bb" style="cursor: pointer" onclick="swal('Ajutor', 'Pentru a crea un eveniment, selectează datele corespunzătoare în calendar și introdu detaliile în casetă.')">Ajutor</a>
               </div>
+            <% else %>
+              <%= render @current_admin_events %>
+              <p style="text-align: center"><a class="mt-4 bb" style="cursor: pointer" onclick="swal('Ajutor', 'Pentru a crea un eveniment, selectează datele corespunzătoare în calendar și introdu detaliile în casetă.')">Ajutor</a></p>
             <% end %>
-
           </div>
         </div>
       </div>
@@ -140,5 +142,40 @@
   <% end %>
 
 </section>
+
+<script>
+  // Open the edit modal when clicked on the event card
+  $('.event-info').on('click', (e) => {
+    $.getScript(`events/${e.currentTarget.id}/edit`, () => {});
+    document.addEventListener('modal-closed', () => {
+      calendar.render()
+      calendar.getEventSources().forEach(eventSource => eventSource.refetch())
+    });
+  });
+
+  // Update eventlist on eventDrop
+  document.addEventListener('eventDrop', () => {
+    // reloadWithTurbolinks()
+  });
+
+
+  var reloadWithTurbolinks = (function () {
+    var scrollPosition
+
+    function reload () {
+      scrollPosition = [window.scrollX, window.scrollY]
+      Turbolinks.visit(window.location.toString(), { action: 'replace' })
+    }
+
+    document.addEventListener('turbolinks:load', function () {
+      if (scrollPosition) {
+        window.scrollTo.apply(window, scrollPosition)
+        scrollPosition = null
+      }
+    })
+
+    return reload
+  })()
+</script>
 
 <% content_for(:page_title, 'Panou de control') %>
