--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -49,6 +49,12 @@
         <% end %>
       </li>
 
+      <li class="<%= active_nav_item('events', 'index') %>">
+        <%= link_to events_path, class: "nav-link" do %>
+          <i class="fas fa-calendar-day"></i> <span>Evenimente</span>
+        <% end %>
+      </li>
+
       <li class="menu-header">Aplicație</li>
 
       <li class="<%= active_nav_item('home', 'about') %>">
@@ -58,11 +64,11 @@
       </li>
 
 <!--       <#= render 'shared/sidebar_dropdown', title: 'Resurse', icon: 'fas fa-file-alt' do #>
-      
+
         <li class="<%= active_nav_item('students', crud_actions) %>">
           <%= link_to 'Students', students_path, class: 'nav-link' %>
         </li>
-      
+
       <# end #> -->
     </ul>
   </aside>
