--- a/app/views/events/_edit.html.erb
+++ b/app/views/events/_edit.html.erb
@@ -7,14 +7,9 @@
 
 <%= form_with(model: @event, id: 'edit_event_form', data: { controller: 'validation' }) do |form| %>
 	<div class="modal-body">
-	  <!-- <div class="form-group"> -->
-	    <%# form.label :title %>
-	    <%= form.hidden_field :title, class: 'form-control', id: 'title-hidden-field' %>
-	  <!-- </div> -->
+    <%= form.hidden_field :title, class: 'form-control', id: 'title-hidden-field' %>
 	  <div class="form-group">
 	    <%= form.label :color %>
-	    <%# form.color_field :color, class: 'form-control' %>
-
 	    <div class="selectgroup selectgroup-pills">
         <div class="row gutters-xs">
           <div class="col-auto">
@@ -78,8 +73,8 @@
 	  </div>
 	  <div class="form-group">
 	    <%= form.label :admin_id %>
-      <input value="<%= current_admin.name %>" class="form-control" readonly="readonly" type="text">
-	    <%= form.hidden_field :admin_id, value: current_admin.id %>
+      <input value="<%= @event.admin.name %>" class="form-control" readonly="readonly" type="text">
+	    <%# form.hidden_field :admin_id, value: current_admin.id %>
 	    <%# form.collection_select(:admin_id, Admin.all, :id, :to_s, {}, { class: 'form-control', readonly: true, data: { controller: 'select' } }) %>
 	  </div>
 	</div>
