--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,7 +1,7 @@
 <div class="card event-card" id="<%= event.id %>" style="border-left: 4px solid <%= event.color %>; box-shadow: 0 0px 10px rgba(0, 0, 0, 0.1);">
   <div class="card-body">
     <div class="row">
-      <div class="col-xl-10 col-l-10 col-12 event-info" id="<%= event.id %>" style="cursor: pointer">
+      <div class="col-xl-10 col-l-10 col-m-9 col-s-8 col-12 event-info" id="<%= event.id %>" style="cursor: pointer">
         <% if event.all_day %>
           <%= event.start_date %>, <span>Toată ziua</span>
 
@@ -18,8 +18,8 @@
         <br/>
         <strong><%= event.title %></strong>
       </div>
-      <div class="col-xl-2 col-l-2 col-12">
-        <%= link_to icon('fas fa-trash'), event, title: 'Șterge', class: 'text-danger', method: :delete, data: { confirm_swal: 'Ești sigur că vrei să ștergi evenimentul?', remote: true, method: :delete } %>
+      <div class="col-xl-2 col-l-2 col-m-3 col-s-4 col-12 p-xl-0 pt-1">
+        <%= link_to icon('fas fa-trash'), event, title: 'Șterge', class: 'btn btn-danger btn-icon btn-sm', method: :delete, data: { confirm_swal: 'Ești sigur că vrei să ștergi evenimentul?', remote: true, method: :delete } %>
       </div>
     </div>
   </div>
