--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: notification, data: { controller: 'validation' }) do |form| %>
   <div class="form-group">
     <%= form.label :admin_id %>
-    <%= form.collection_select(:admin_id, Admin.all, :id, :to_s, {}, { class: 'form-control', data: { controller: 'select' } }) %>
+    <%= form.collection_select(:admin_id, Admin.all, :id, :name, {}, { class: 'form-control', data: { controller: 'select' } }) %>
   </div>
   <div class="form-group">
     <%= form.label :text %>
