--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -168,7 +168,7 @@
           <% end %>
         </div>
         <div class="dropdown-footer text-center">
-          <%= link_to 'Vezi toate notificările<i class="fas fa-chevron-right"></i>'.html_safe, model %>
+          <%= link_to 'Vezi toate notificările<i class="fas fa-chevron-right"></i>'.html_safe, profile_path %>
         </div>
       </div>
     </li>
@@ -189,15 +189,13 @@
         <!-- Dropdown menu -->
         <div class="dropdown-menu dropdown-menu-right">
           <div class="dropdown-title">Stare: <span class="text-success">Conectat</span></div>
-          <%= link_to(icon("far fa-user", " Profil"), edit_registration_path(current_admin), class: "dropdown-item has-icon") %>
+          <%= link_to(icon("fas fa-user-circle", " Contul tău"), profile_path, class: "dropdown-item has-icon") %>
+          <%= link_to(icon("fas fa-user-edit", " Modifică contul"), edit_registration_path(current_admin), class: "dropdown-item has-icon") %>
           <a href="#" class="dropdown-item has-icon">
-            <i class="fas fa-bolt"></i> Activități
-          </a>
-          <a href="#" class="dropdown-item has-icon">
-            <i class="fas fa-cog"></i> Setări
+            <i class="fas fa-cog"></i> Configurări
           </a>
           <div class="dropdown-divider"></div>
-          <%= link_to("<i class=\"fas fa-sign-out-alt\"></i> Deautentificare".html_safe, destroy_admin_session_path, method: :delete, class: "dropdown-item has-icon text-danger") %>
+          <%= link_to("<i class=\"fas fa-sign-out\"></i> Deautentificare".html_safe, destroy_admin_session_path, method: :delete, class: "dropdown-item has-icon text-danger") %>
         </div>
       </li>
     <% else %>
